samples/_failures_safe/1761626505_f65d6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2d8c9e5.c: In function ‘show_menu’:
./samples/SAFE/__tmp_d2d8c9e5.c:151:12: error: missing terminating " character
  151 |     printf("2. Multiply matrices
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d2d8c9e5.c:151:5: error: expected expression at end of input
  151 |     printf("2. Multiply matrices
      |     ^~~~~~
./samples/SAFE/__tmp_d2d8c9e5.c:151:5: error: expected declaration or statement at end of input
